updates to landing page

--- a/front-end/src/App-Dark.css
+++ b/front-end/src/App-Dark.css
@@ -122,8 +122,6 @@ body {
   display: flex;
   flex-direction: column;
   background-color: black;
-  
-  
 }
 
 .Landing-Display-First {
@@ -174,7 +172,7 @@ body {
 
 .Landing-Display-Text {
   animation: animatedText 13s linear infinite;
-  width: 2500px;
+  width: 3000px;
   position: absolute;
   text-align: left;
 }
@@ -194,12 +192,9 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border: solid 5px;
-  border-color: greenyellow;
-  border-radius: 40px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 20%;
+  margin-top: 17%;
   margin-bottom: 5%;
   padding: 10px;
   text-align: center;
@@ -209,19 +204,27 @@ body {
 
 }
 
-.Landing-Inner:hover {
+.Landing-Inner-Container {
+  border: solid 5px greenyellow;
+  border-radius: 40px;
+  padding: 10px;
+}
+
+.Landing-Inner-Container:hover {
   border-color: black;
   background-color: greenyellow;
   color: black;
 }
 
-.Landing-Inner:hover input {
-  background-color: black;
-  border-color: greenyellow;
+.Landing-Inner-Container:hover input {
+  background-color: greenyellow;
+  border-color: black;
+  color: black;
+
 }
 
-.Landing-Inner:hover input::placeholder {
-  color: greenyellow;
+.Landing-Inner-Container:hover input::placeholder {
+  color: black;
 }
 
 .Address-Container {
@@ -241,16 +244,21 @@ body {
 }
 
 .Landing-Page-Input{
-  background-color: greenyellow;
-  color: black;
-  border: solid 1px;
+  background-color: black;
+  color: greenyellow;
+  border: solid 3px;
   border-color: inherit;
   border-radius: 5px;
+  font-weight: bold;
 }
 
 .Landing-Page-Input::placeholder {
-  color: black;
-  font-weight: bolder;
+  color: greenyellow;
+  font-weight: bold;
+}
+
+.Landing-Page-Input:focus {
+  outline: none;
 }
 
 
@@ -279,6 +287,7 @@ body {
   display: inline;
   border-radius: 5px;
   margin-bottom: 1px;
+  margin-top: 5px;
 }
 
 /*Vending Machine*/
