--- a/front-end/src/App-Light.css
+++ b/front-end/src/App-Light.css
@@ -173,7 +173,7 @@
   
   .L-Landing-Display-Text {
     animation: animatedText 13s linear infinite;
-    width: 2500px;
+    width: 3000px;
     position: absolute;
     text-align: left;
   }
@@ -193,25 +193,41 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: solid #f54029 5px;
-    border-radius: 40px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20%;
+    margin-top: 17%;
     margin-bottom: 5%;
     padding: 10px;
     text-align: center;
     color: #f54029;
-    background-color: whitesmoke;
-    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
-  
+    
   }
   
-  .L-Landing-Inner:hover {
+  .L-Landing-Inner-Container {
+    border: solid 5px #f54029;
+    border-radius: 40px;
+    padding: 10px;
+    background-color: whitesmoke;
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
+  }
+  
+  .L-Landing-Inner-Container:hover {
     border-color: whitesmoke;
     background-color: #f54029;
     color: whitesmoke;
   }
+  
+  .L-Landing-Inner-Container:hover input {
+    background-color: #f54029;
+    border-color: white;
+    color: whitesmoke;
+  
+  }
+  
+  .L-Landing-Inner-Container:hover input::placeholder {
+    color: whitesmoke;
+  }
+  
   
   .L-Address-Container {
     display: flex;
