--- a/front-end/src/App-Dark.css
+++ b/front-end/src/App-Dark.css
@@ -324,18 +324,40 @@ body {
  
 }
 
-.Contract-Information {
+.Display-Info {
   position: absolute;
-  top: 10px;
-  right: 10px;
-  border: solid 2px greenyellow;
+  top: 20px;
+  right: 20px;
+  width: 60px;
+  height: 60px;
+  background-color: greenyellow;
+  border: solid black 5px;
+  color: black;
+  border-radius: 100px;
+  font-family:'digital-7';
+  font-weight: bold;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.Display-Info:hover {
+  background-color: black;
+  border-color: greenyellow;
+  color: greenyellow
+}
+
+.Contract-Information {
+  border: solid 5px greenyellow;
   color: greenyellow;
   background-color: black;
-  width: 400px;
+  width: 25%;
   height: 50px;
   font-size: 10px;
   padding: 5px;
   border-radius: 10px;
+  position: absolute;
+  top: 2%;
+  right: 9%;
 }
 
 .Contract-Information h3 {
@@ -353,7 +375,7 @@ body {
   align-items: center;
   gap: 5%;
   position: absolute;
-  top: 12%;
+  top: 15%;
   right: 8%;
   border: solid greenyellow 5px;
   padding: 60px;
@@ -375,8 +397,6 @@ body {
   background-color: black;
   color: greenyellow;
   border: solid greenyellow 2px;
-  /* width: 80px; */
-  /* height: 36px; */
   display: inline-block;
   border-radius: 10px;
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
