--- a/front-end/src/App-Light.css
+++ b/front-end/src/App-Light.css
@@ -675,6 +675,29 @@
   left: 2px;
 }
 
+.L-Update-Price {
+  border: solid #f54029 3px;
+  background-color: whitesmoke;
+  color: #f54029;
+  border-radius: 100px;
+  height: 20px;
+  width: 20px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  padding: 2px 3px 4px 2px;
+  float: right;
+  position: absolute;
+  bottom: 2px;
+  right: 2px;
+  cursor: pointer;
+}
+
+.L-Update-Price:hover {
+  background-color: #f54029;
+  color: whitesmoke;
+}
+
 .L-Item-Price{
   border: solid #f54029 3px;
   background-color: whitesmoke;
