--- a/front-end/src/App-Dark.css
+++ b/front-end/src/App-Dark.css
@@ -112,6 +112,78 @@ body {
   100% { transform: rotate(360deg); }
 }
 
+.Mint-Tokens {
+  width: 20%;
+  height: 15%;
+  background-color: black;
+  color: greenyellow;
+  border: solid greenyellow;
+  border-radius: 50px;
+  font-size: 30px;
+  font-weight: bold;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+  font-family:'digital-7';
+  position: absolute;
+  top: 50%;
+  left: 10%;
+}
+
+.Create-NFT {
+  width: 20%;
+  height: 15%;
+  background-color: black;
+  color: greenyellow;
+  border: solid greenyellow;
+  border-radius: 50px;
+  font-size: 30px;
+  font-weight: bold;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+  font-family:'digital-7';
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.Search-Collection {
+  width: 20%;
+  height: 15%;
+  background-color: black;
+  color: greenyellow;
+  border: solid greenyellow;
+  border-radius: 50px;
+  font-size: 30px;
+  font-weight: bold;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+  font-family:'digital-7';
+  position: absolute;
+  top: 50%;
+  right: 10%;
+}
+
+.Mint-Tokens:hover {
+  background-color: greenyellow;
+  color: black;
+}
+
+.Create-NFT:hover {
+  background-color: greenyellow;
+  color: black;
+}
+
+.Search-Collection:hover {
+  background-color: greenyellow;
+  color: black;
+}
+
 /*Landing Page*/
 
 .Landing {
@@ -170,6 +242,12 @@ body {
   border: black solid 5px;
 }
 
+.Landing-Display-Second:hover {
+  background-color: greenyellow;
+  color: black;
+  border: black solid 5px;
+}
+
 .Landing-Display-Text {
   animation: animatedText 13s linear infinite;
   width: 3000px;
@@ -188,10 +266,10 @@ body {
 
 .Landing-Inner {
   height: 500px;
-  width: 600px;
+  width: 90%;
   display: flex;
-  flex-direction: column;
   justify-content: center;
+  gap: 5%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 17%;
@@ -204,26 +282,56 @@ body {
 
 }
 
-.Landing-Inner-Container {
+.Landing-Inner-Container-Left {
   border: solid 5px greenyellow;
   border-radius: 40px;
   padding: 10px;
+  width: 100%;
+  height: 90%
 }
 
-.Landing-Inner-Container:hover {
+.Landing-Inner-Container-Middle {
+  border: solid 5px greenyellow;
+  border-radius: 40px;
+  padding: 10px;
+  width: 100%;
+  height: 90%
+}
+
+.Landing-Inner-Container-Right {
+  border: solid 5px greenyellow;
+  border-radius: 40px;
+  padding: 10px;
+  width: 100%;
+  height: 90%
+}
+
+.Landing-Inner-Container-Left:hover {
   border-color: black;
   background-color: greenyellow;
   color: black;
 }
 
-.Landing-Inner-Container:hover input {
+.Landing-Inner-Container-Middle:hover {
+  border-color: black;
+  background-color: greenyellow;
+  color: black;
+}
+
+.Landing-Inner-Container-Right:hover {
+  border-color: black;
+  background-color: greenyellow;
+  color: black;
+}
+
+.Landing-Inner-Container-Middle:hover input {
   background-color: greenyellow;
   border-color: black;
   color: black;
 
 }
 
-.Landing-Inner-Container:hover input::placeholder {
+.Landing-Inner-Container-Middle:hover input::placeholder {
   color: black;
 }
 
