--- a/front-end/src/App-Light.css
+++ b/front-end/src/App-Light.css
@@ -113,6 +113,82 @@
   100% { transform: rotate(360deg); }
 }
 
+.L-Mint-Tokens {
+  width: 20%;
+  height: 15%;
+  background-color: whitesmoke;
+  color: #f54029;
+  border: solid #f54029;
+  border-radius: 50px;
+  font-size: 30px;
+  font-weight: bold;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+  font-family:'digital-7';
+  position: absolute;
+  top: 50%;
+  left: 10%;
+}
+
+.L-Create-NFT {
+  width: 20%;
+  height: 15%;
+  background-color: whitesmoke;
+  color: #f54029;
+  border: solid #f54029;
+  border-radius: 50px;
+  font-size: 30px;
+  font-weight: bold;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+  font-family:'digital-7';
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.L-Search-Collection {
+  width: 20%;
+  height: 15%;
+  background-color: whitesmoke;
+  color: #f54029;
+  border: solid #f54029;
+  border-radius: 50px;
+  font-size: 30px;
+  font-weight: bold;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: auto;
+  font-family:'digital-7';
+  position: absolute;
+  top: 50%;
+  right: 10%;
+}
+
+.L-Mint-Tokens:hover {
+  background-color: #f54029;
+  color: whitesmoke;
+  border-color: whitesmoke;
+}
+
+.L-Create-NFT:hover {
+  background-color: #f54029;
+  color: whitesmoke;
+  border-color: whitesmoke;
+}
+
+.L-Search-Collection:hover {
+  background-color: #f54029;
+  color: whitesmoke;
+  border-color: whitesmoke;
+}
+
+
 /*Landing Page*/
 
 .L-Landing {
@@ -189,10 +265,10 @@
 
 .L-Landing-Inner {
   height: 500px;
-  width: 600px;
+  width: 90%;
   display: flex;
-  flex-direction: column;
   justify-content: center;
+  gap: 5%;
   margin-left: auto;
   margin-right: auto;
   margin-top: 17%;
@@ -203,21 +279,53 @@
   
 }
 
-.L-Landing-Inner-Container {
+
+.L-Landing-Inner-Container-Left {
   border: solid 5px #f54029;
+  background-color: whitesmoke;
   border-radius: 40px;
   padding: 10px;
-  background-color: whitesmoke;
-  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
+  width: 100%;
+  height: 90%
 }
 
-.L-Landing-Inner-Container:hover {
+.L-Landing-Inner-Container-Middle {
+  border: solid 5px #f54029;
+  background-color: whitesmoke;
+  border-radius: 40px;
+  padding: 10px;
+  width: 100%;
+  height: 90%
+}
+
+.L-Landing-Inner-Container-Right {
+  border: solid 5px #f54029;
+  background-color: whitesmoke;
+  border-radius: 40px;
+  padding: 10px;
+  width: 100%;
+  height: 90%
+}
+
+.L-Landing-Inner-Container-Left:hover {
   border-color: whitesmoke;
   background-color: #f54029;
   color: whitesmoke;
 }
 
-.L-Landing-Inner-Container:hover input {
+.L-Landing-Inner-Container-Middle:hover {
+  border-color: whitesmoke;
+  background-color: #f54029;
+  color: whitesmoke;
+}
+
+.L-Landing-Inner-Container-Right:hover {
+  border-color: whitesmoke;
+  background-color: #f54029;
+  color: whitesmoke;
+}
+
+.L-Landing-Inner-Container-Middle:hover input {
   background-color: #f54029;
   border-color: white;
   color: whitesmoke;
