--- a/front-end/src/App-Dark.css
+++ b/front-end/src/App-Dark.css
@@ -479,16 +479,19 @@ body {
 
 .Contract-Information {
   color: greenyellow;
+  border: solid 5px greenyellow;
   background-color: black;
-  width: 220px;
-  height: 70px;
-  font-size: 16px;
-  padding: 10px;
+  width: 300px;
+  height: 85px;
+  font-size: 14px;
+  padding: 5px;
   border-radius: 10px;
   position: absolute;
   top: 2%;
-  right: 7.5%;
-  text-align: right;
+  right: 11%;
+  text-align: center;
+  cursor: pointer;
+  padding-bottom: 7px;
 }
 
 .Contract-Information:hover {
@@ -511,7 +514,7 @@ body {
   align-items: center;
   gap: 5%;
   position: absolute;
-  top: 15%;
+  top: 18%;
   right: 8%;
   border: solid greenyellow 5px;
   padding: 60px;
@@ -620,7 +623,7 @@ body {
 .Selection-Text-Moving-Longer {
   position: absolute;
   width: 800px;
-  animation: DisplayLonger 9s linear infinite;
+  animation: DisplayLonger 8s linear infinite;
   margin: 0
 }
 
@@ -645,7 +648,7 @@ body {
     left: 120%;
   }
   to {
-    left: -180%;
+    left: -250%;
   }
 } 
 
@@ -654,7 +657,7 @@ body {
     left: 100%;
   }
   to {
-    left: -500%;
+    left: -300%;
   }
 }
 
