--- a/front-end/src/App-Dark.css
+++ b/front-end/src/App-Dark.css
@@ -117,7 +117,7 @@ body {
   height: 15%;
   background-color: black;
   color: greenyellow;
-  border: solid greenyellow;
+  border: solid 5px greenyellow;
   border-radius: 50px;
   font-size: 30px;
   font-weight: bold;
@@ -126,8 +126,8 @@ body {
   margin-right: auto;
   font-family:'digital-7';
   position: absolute;
-  top: 50%;
-  left: 10%;
+  top: 55%;
+  left: 12%;
 }
 
 .Create-NFT {
@@ -135,7 +135,7 @@ body {
   height: 15%;
   background-color: black;
   color: greenyellow;
-  border: solid greenyellow;
+  border: solid 5px greenyellow;
   border-radius: 50px;
   font-size: 30px;
   font-weight: bold;
@@ -144,7 +144,7 @@ body {
   margin-right: auto;
   font-family:'digital-7';
   position: absolute;
-  top: 50%;
+  top: 55%;
   left: 0;
   right: 0;
   margin-left: auto;
@@ -156,7 +156,7 @@ body {
   height: 15%;
   background-color: black;
   color: greenyellow;
-  border: solid greenyellow;
+  border: solid 5px greenyellow;
   border-radius: 50px;
   font-size: 30px;
   font-weight: bold;
@@ -165,8 +165,8 @@ body {
   margin-right: auto;
   font-family:'digital-7';
   position: absolute;
-  top: 50%;
-  right: 10%;
+  top: 55%;
+  right: 12%;
 }
 
 .Mint-Tokens:hover {
@@ -200,7 +200,7 @@ body {
   font-family:'digital-7';
   font-size: 100px;
   height: 200px;
-  width: 1200px;
+  width: 1300px;
   background-color: black;
   color: greenyellow;
   border: solid greenyellow 5px;
@@ -209,8 +209,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  left: 50%;
-  margin-left: -600px;
+  margin-left: 113.2px;
+  margin-top: auto;
   margin-top: 12%;
   position: absolute;
   overflow: hidden;
@@ -220,7 +220,7 @@ body {
   font-family:'digital-7';
   font-size: 100px;
   height: 200px;
-  width: 1200px;
+  width: 1300px;
   background-color: black;
   color: greenyellow;
   border: solid greenyellow 5px;
@@ -233,7 +233,7 @@ body {
   right: 0;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 2%;
+  margin-top: 3%;
   position: absolute;
   overflow: hidden;
 }
@@ -274,7 +274,7 @@ body {
   gap: 5%;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 17%;
+  margin-top: 18%;
   margin-bottom: 5%;
   padding: 10px;
   text-align: center;
