--- a/front-end/src/App-Light.css
+++ b/front-end/src/App-Light.css
@@ -470,6 +470,22 @@
   color: #f54029;
 }
 
+.L-Withdraw-Button {
+  position: absolute;
+  top: 100px;
+  right: 20px;
+  width: 60px;
+  height: 60px;
+  background-color: #f54029;
+  border: solid whitesmoke 5px;
+  color: whitesmoke;
+  border-radius: 100px;
+  font-family:'digital-7';
+  font-weight: bold;
+  font-size: 18px;
+  cursor: pointer;
+}
+
 .L-Contract-Information {
   border: solid 5px whitesmoke;
   background-color: #f54029;
@@ -515,6 +531,55 @@
   background-color: #f54029;
   padding: 60px;
   border-radius: 20px;
+}
+
+.L-Owner-Container {
+  height: 60%;
+  width: 20%;
+  color: #f54029;
+  background-color: #f54029;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5%;
+  position: absolute;
+  top: 18%;
+  right: 8%;
+  border: solid #f54029 5px;
+  padding: 60px;
+  border-radius: 20px;
+}
+
+.L-Owner-Inner {
+  border: solid #f54029 5px;
+  padding: 30px;
+  height: 86%;
+  border-radius: 20px;
+  background-color: whitesmoke;
+}
+
+.L-Owner-Inner:hover  {
+  background-color: #f54029;
+  color: whitesmoke;
+  border: solid whitesmoke 3px;
+}
+
+.L-Withdraw {
+  height: 60px;
+  width: 150px;
+  background-color: #f54029;
+  border: solid whitesmoke 3px;
+  border-radius: 30px;
+  color: whitesmoke;
+  font-weight: bold;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.L-Withdraw:hover {
+  color: #f54029;
+  background-color: whitesmoke;
+  border-color: #f54029;
 }
 
 .L-Change-Display {
