--- a/front-end/src/App-Light.css
+++ b/front-end/src/App-Light.css
@@ -450,7 +450,7 @@
 
 .L-Home-Button {
   position: absolute;
-  top: 20px;
+  bottom: 180px;
   right: 20px;
   width: 60px;
   height: 60px;
@@ -470,9 +470,9 @@
   color: #f54029;
 }
 
-.L-Withdraw-Button {
+.L-Owner-Button {
   position: absolute;
-  top: 100px;
+  bottom: 100px;
   right: 20px;
   width: 60px;
   height: 60px;
@@ -487,18 +487,18 @@
 }
 
 .L-Contract-Information {
-  border: solid 5px whitesmoke;
-  background-color: #f54029;
-  color: whitesmoke;
-  width:300px;
-  height: 90px;
-  font-size: 14px;
+  /* border: solid 5px whitesmoke;
+  background-color: #f54029; */
+  color: #f54029;
+  width:400px;
+  height: 85px;
+  font-size: 18px;
   padding: 5px;
   border-radius: 10px;
   position: absolute;
-  top: 2%;
-  right: 11%;
-  text-align: center;
+  top: 0.5%;
+  right: 8%;
+  text-align: right;
   cursor: pointer;
 }
 
@@ -534,31 +534,25 @@
 }
 
 .L-Owner-Container {
-  height: 60%;
-  width: 20%;
+  height: 300px;
+  width: 300px;
   color: #f54029;
-  background-color: #FFB52E;
+  background-color: whitesmoke;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 5%;
   position: absolute;
   top: 18%;
   right: 8%;
-  /* border: solid #f54029 5px; */
+  border: solid #f54029 5px;
   padding: 60px;
   border-radius: 20px;
+  position:absolute;
+  top: 25%;
 }
 
-.L-Owner-Inner {
-  border: solid #f54029 5px;
-  padding: 30px;
-  height: 86%;
-  border-radius: 20px;
-  background-color: whitesmoke;
-}
 
-.L-Owner-Inner:hover  {
+.L-Owner-Container:hover  {
   background-color: #f54029;
   color: whitesmoke;
   border: solid whitesmoke 3px;
