--- a/front-end/src/App-Light.css
+++ b/front-end/src/App-Light.css
@@ -214,9 +214,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-left: 113.2px;
-  margin-top: auto;
-  margin-top: 10%;
+  left: 0;
+  right:0;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 12%;
   position: absolute;
   overflow: hidden;
 }
